# claw-pen

./: .env.shared  .gitignore  AGENTS.md  Cargo.toml  DEBUGGING_LOG.md  EXO_DETACH_SOLUTION.md  FINAL_VERIFICATION.md  GUI_AGENT_CREATION.md  IDENTITY.md  INSTALLER_STATUS.md  INTEGRATION_TEST_RESULTS.md  LICENSE  MEMORY.md  NATIVE_INFERENCE_CONFIG.md  OPENCLAW_INTEGRATION_SUCCESS.md  PERFORMANCE.md  PORTS.md  QUICK_START.md  README.md  SECURITY_AUDIT.md  SETUP_GUIDE.md  SOUL.md  STARTUP.md  TOOLS.md  USER.md  VERIFICATION_CHECKLIST.md  VOLUME_MOUNTING.md  WORKFLOW_SYSTEM.md  agents.json  andor-bridge.js  backup-agents.sh  claw-pen-orchestrator.service  claw-pen.example.toml  claw-pen.toml  dashboard.html  exo-TEST_PLAN.md  exo-agent-run.sh  exo-kimi-config.toml  exo-test.sh  gpu-prices-canada.md  (+28 more)
.github/workflows/: ci.yml
.openclaw/: workspace-state.json
agent-proxy/: Cargo.toml  Dockerfile
agent-proxy/src/: main.rs
agents-premium/lead-hunter/: README.md  agent.toml  main.py  notifier.py  openclaw_runner.py  requirements.txt  run.sh  setup_google_alerts.md  test_feed.xml
agents-premium/lead-hunter/memory/: leads.json
agents-premium/lead-hunter/notifications/: pending_20260226_191944.json  pending_20260226_191955.json  pending_20260226_192020.json  pending_20260226_192944.json  pending_20260226_192951.json  pending_20260226_192958.json  pending_20260226_193009.json  pending_20260226_193015.json  pending_20260226_193021.json  pending_20260226_193022.json  pending_20260226_193033.json  pending_20260226_193044.json  pending_20260226_193050.json  pending_20260226_193055.json  pending_20260226_193114.json  pending_20260226_193115.json  pending_20260226_193121.json  pending_20260226_193126.json  pending_20260226_193326.json  pending_20260226_193327.json  pending_20260226_193333.json  pending_20260226_193348.json  pending_20260226_193441.json  pending_20260226_193447.json
agents-premium/lead-hunter/sources/: __init__.py  facebook.py  google_alerts.py  kijiji.py  municipal.py  rss.py
agents/finance/finn/: agent.toml
agents/finance/pax/: agent.toml
agents/finance/rae/: agent.toml
agents/finance/reporter/: agent.toml
agents/lead-hunter/: agent.toml
agents/tutor-box/: README.md  SOUL.md  USER.md  config.json
agents/tutor-box/workspace/: AGENTS.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  TOOLS.md
claw-den-ui/: index.html
claw-pen-tauri/: index.html  main.rs
claw-pen-templates/openclaw-agent/: Containerfile  template.yaml
claw-pen-templates/openclaw-agent-full/: Dockerfile  Dockerfile.full  entrypoint.sh
claw-pen-templates/openclaw-agent/workspace/: AGENTS.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  SOUL.md  USER.md
claw-pen-templates/revit-agent/: Dockerfile  entrypoint.sh  template.yaml
claw-pen-templates/revit-agent/workspace/: AGENTS.md  (+6 more)
deploy/: .env.template  README.md  TEAM_AGENTS_SETUP.md  agent-server-bootstrap.sh  andor-bridge.js  andor-team-bridge.js  bootstrap.sh  build-envs.sh  seed-team-agents.js  setup-vm.sh  team-agents.json
docs/: ARCHITECTURE.md  GARDE-FOUS-FR.md  GETTING-STARTED.md  IDENTITY.md  PILOT-BOREAL-FR.md  SECRETS.md  SECURITY_FIXES.md  TEAMS.md  TEMPLATES.md
electron-app/: index.html  main.js  package-lock.json  package.json  preload.js  test-auth.js
identities/: README.md
inference/: ARCHITECTURE.md  Cargo.toml
inference/src/: api.rs  inference.rs  lib.rs  main.rs  model.rs  tests.rs
memory/: 2026-02-21-1905.md  2026-02-23.md  2026-02-24.md  2026-02-25.md  2026-02-27-claw-pen-auth-config.md  2026-02-27-oauth-huggingface-integration.md  2026-02-27-tauri-dropdown-crash.md  2026-02-28-french-ai-consortium.md  2026-03-01.md
memory/chat/: .export-state.json  2026-02-26.md  2026-02-27.md  2026-02-28.md  2026-03-01.md  2026-03-02.md  2026-03-03.md
orchestrator/: .env.example  AUTH.md  CLAUDE.md  Cargo.toml  Dockerfile.kimi  Dockerfile.llamacpp-cuda  Dockerfile.no-tailscale  Dockerfile.openclaw-agent  Dockerfile.openclaw-base  Dockerfile.tailscale  Dockerfile.tailscale-custom  Dockerfile.tailscale-lan  Dockerfile.tailscale-lan-v2  IMPLEMENTATION_COMPLETE.md  LOCAL_INFERENCE.md  SETUP_STATUS.md  build-local-inference.sh  build.rs  claw-pen-orchestrator.toml  claw-pen-test.toml  entrypoint-custom.sh  entrypoint-tailscale-lan.sh  entrypoint-tailscale.sh  entrypoint.sh  exo-entrypoint.sh  tailscale-startup.sh  terminal.html  test-chat.sh  test-full-flow.sh  test_auth.sh  wsl-Dockerfile
orchestrator/openclaw-tailscale/: Dockerfile  entrypoint.sh
orchestrator/src/: agent_comms.rs  andor.rs  api.rs  auth.rs  briefing_engine.rs  chat_db.rs  code_index.rs  config.rs  container.rs  containment.rs  direct_llm.rs  executor.rs  exo_runtime.rs  gateway_harness.rs  inference.rs  main.rs  network.rs  orchestration_engine.rs  roadmap.rs  roadmap_api.rs  rpc.rs  secrets.rs  session_manager.rs  shared_memory.rs  snapshots.rs  storage.rs  teams.rs  templates.rs  types.rs  validation.rs  volume_attachment.rs  workflow.rs
orchestrator/templates/: agents.yaml
runtime/: Cargo.toml
runtime/src/: agent.rs  config.rs  daemon.rs  lib.rs  main.rs
scripts/: README.md  install.sh
static-site/: index.html
static-site/app/: index.html
static-site/assets/: index-BTu9wFVm.js  index-CwOgWBQQ.css
tauri-app/: Cargo.toml  gen_icon.py  tauri.conf.json
tauri-app/capabilities/: default.json
tauri-app/icons/: icon.icns
tauri-app/src/: main.rs
teams/: _example-team.toml  design-build-firm.toml  finance-team.toml
templates/: TEMPLATES.md  agents.yaml  local-inference-agent.json  providers.yaml  router-prompt.md
templates/openclaw-agent/: Containerfile  README.md  entrypoint.sh  template.yaml
templates/safe-code-assistant/: Containerfile  README.md  requirements.txt  template.yaml
tools/: chat-transcript-export.py  google-alerts-monitor.sh
tutor-box-init/: SOUL.md
ui/: Cargo.toml  index.html
ui/src/: api.rs  main.rs  tauri.rs  types.rs
ui/src/components/: chat.rs  dashboard.rs  login.rs  logs.rs  mod.rs  settings.rs  tabbed_chat.rs  teams.rs
website/: pricing.html
website/blog/: index.html  why-we-built-claw-pen.html
(+12 files in other folders)
