[package]
name = "claw-pen-inference"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "claw-pen-inference"
path = "src/main.rs"

[dependencies]
# GGUF LLM inference engine - llama.cpp in Rust
llama-gguf = { version = "0.13", default-features = false, features = ["cuda"] }

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
http = "1.0"

# Async runtime
tokio = { version = "1", features = ["full", "test-util"] }
async-stream = "0.3"
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
rand = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Config
dirs = "5.0"

[dev-dependencies]
tokio-test = "0.4"
