[package]
name = "claw-pen-orchestrator"
version.workspace = true
edition.workspace = true

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Config
config = "0.14"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }

# Container runtimes
bollard = "0.16"

# Process management
sysinfo = "0.30"

# Shared memory / SQLite
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.11", features = ["json"] }
