[package]
name = "claw-pen-ui"
version.workspace = true
edition.workspace = true

# Yew frontend - will be compiled to WebAssembly

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-net = { version = "0.5", features = ["http"] }
web-sys = { version = "0.3", features = ["console"] }
wasm-logger = "0.2"

[profile.release]
opt-level = "s"
