[package]
name = "claw-pen-ui"
version.workspace = true
edition.workspace = true

# Yew frontend - will be compiled to WebAssembly

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-net = { version = "0.5", features = ["http", "websocket"] }
web-sys = { version = "0.3", features = ["console"] }
wasm-logger = "0.2"
js-sys = "0.3"
futures = "0.3"

